<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user.TermsAndConditionsFragment">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:id="@+id/termsandconditions"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="150dp"
            android:layout_margin="20dp"
            android:src="@drawable/onlinevoting"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="WELCOME ONLINE VOTING SYSTEM"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="24sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:text="VOTING IS YOUR POWER"
            android:textAlignment="center"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="italic" />
        <ScrollView
            android:layout_width="350dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/scrolltext" />
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginLeft="70dp">
            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/must_read_all_instructions"
                android:textSize="11sp" />

            <CheckBox
                android:id="@+id/checkBox2"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/accept_terms_conditions"
                android:textSize="11sp" />
        </LinearLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/click_here_to_vote" />

    </LinearLayout>
    <FrameLayout
        android:id="@+id/votefragmentContainer1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" />
</RelativeLayout>