<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bg3"
    tools:context=".user.StatusFragment">



    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="left"
        tools:ignore="MissingConstraints">

        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_image"
            android:layout_marginTop="18dp"
            android:layout_marginStart="15dp"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/votebg"
            app:civ_border_width="2dp"
            app:civ_border_color="#FF000000"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:textSize="45dp"
            android:fontFamily="sans-serif-smallcaps"
            android:gravity="center"
            android:text="Status"
            android:textColor="#fff" />
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp"
        android:paddingTop="100dp">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:paddingLeft="20sp"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:layout_width="200dp"
            android:id="@+id/statusName"
            android:layout_height="40dp"
            android:gravity="center"
            android:padding="7dp"
            android:text="name"
            android:textColor="@color/black"
            android:background="@drawable/custombutton"
            android:backgroundTint="#D0353333"
            android:textAllCaps="true"
            android:textSize="20sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        android:paddingTop="20dp">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:paddingLeft="20sp"
            android:text="@string/status"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:layout_width="200dp"
            android:id="@+id/statusStatus"
            android:layout_height="40dp"
            android:gravity="center"
            android:padding="7dp"
            android:textColor="@color/black"
            android:background="@drawable/custombutton"
            android:backgroundTint="#D0353333"
            android:text="Not Voted"
            android:textSize="20sp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20dp">

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:paddingLeft="20sp"
            android:text="@string/vote_count"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="7dp"
            android:id="@+id/statusCount"
            android:textColor="@color/black"
            android:background="@drawable/custombutton"
            android:backgroundTint="#D0353333"
            android:text="0"
            android:textSize="20sp"/>

    </LinearLayout>

</LinearLayout>